# dnaya

./: .clang-format  CMakeLists.txt  LICENSE  Makefile  README.md
include/dnaya/: version.hpp.in
include/dnaya/cn/: adjacency_list.hpp  types.hpp
include/dnaya/dyn/: vgz3.hpp
src/dnaya/cn/: adjacency_list.hpp  types.hpp
src/dnaya/dyn/: vgz3.hpp
test/: CMakeLists.txt  version.cpp
tools/: CMakeLists.txt
